src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>How_did_you_hear_about_AppDynamics__c</fullName>
        <label>How did you hear about AppDynamics?</label>
        <picklist>
            <picklistValues>
                <fullName>Online advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online community/forum mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague/friend referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Searched online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Budget__c</fullName>
        <description>IT Budget (Million)</description>
        <label>IT Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_or_Domestic__c</fullName>
        <label>International or Domestic</label>
        <picklist>
            <picklistValues>
                <fullName>US/ Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Java_Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Competitor_Search_Phrase__c</fullName>
        <externalId>true</externalId>
        <label>Last Competitor Search Phrase</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Campaign_Date__c</fullName>
        <label>Last Marketing Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Campaign__c</fullName>
        <description>Last Marketing Campaign before lead is associated to an oppty</description>
        <label>Last Marketing Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Querystring__c</fullName>
        <label>Last Querystring</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Search_Phrase__c</fullName>
        <label>Last Search Phrase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Web_Page__c</fullName>
        <label>Last Web Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Comments__c</fullName>
        <description>Field that the lead fills out if they have comments/questions</description>
        <label>Lead Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Origin_Detail__c</fullName>
        <label>Origin Source Detail</label>
        <picklist>
            <picklistValues>
                <fullName>05-20-13 PEM Philadelphia CIO Summit 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08-23-13 HMG Atlanta 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-05-13 CIO Summit SF 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-12-13 SplunkLive Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Direct Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApacheCon 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApacheCon 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam NYC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Paris 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Chicago 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Dallas 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show DC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Frankfurt 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show London 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Newport Beach 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show SF 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps World London 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS re:Invent 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS Summit London Sept 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS Summit NYC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basta! .NET 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASTA Fall Mainz 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta .Net User Group 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Chew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Field to give more details to the Lead Source</description>
        <label>Lead Source Detail</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Territory</label>
        <referenceTo>Territory_AppD__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_of_Interest_in_APM__c</fullName>
        <label>Level of Interest in APM</label>
        <picklist>
            <picklistValues>
                <fullName>Low: Gathering info only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate: May consider APM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High: Starting APM project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent: Want to buy APM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Companies_Followed__c</fullName>
        <label>LinkedIn Companies Followed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Group_Memberships__c</fullName>
        <label>LinkedIn Group Memberships</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Public_User_Profile__c</fullName>
        <label>LinkedIn Public User Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lite_Download_Time_Stamp__c</fullName>
        <label>Lite Download Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Schedule_Date__c</fullName>
        <label>Meeting Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_to_be_held_by__c</fullName>
        <label>Meeting to be held by</label>
        <picklist>
            <picklistValues>
                <fullName>Randy Boysen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Lam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Reksten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee Weinberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jerry Nelson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pete Abrams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NET_Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>.NET Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Sales_Territory__c</fullName>
        <label>New Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NoTerritoryAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Territory Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_GAP_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No GAP Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Normalized_Country__c</fullName>
        <formula>IF(!ISBLANK(Country),Country, 
IF(!ISBLANK(Current_Country__c),Current_Country__c, 
IF(!ISBLANK(mkto2__Inferred_Country__c),mkto2__Inferred_Country__c, 
&apos;&apos; 
)))</formula>
        <label>Normalized Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_to_Sales__c</fullName>
        <label>Note to Sales</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurture_Timeout_Formula__c</fullName>
        <description>Used by Full Circle to determine how to set a date stamp in the Nurture Timeout field if criteria is met.</description>
        <formula>CASE( Withdraw_Reason__c ,
&quot;Competitor&quot;,3650,
&quot;AppDynamics Employee&quot;,3650,
&quot;Partner Employee&quot;,3650,
&quot;No Longer with Company&quot;,3650,
&quot;SPAMmy data&quot;,3650,
&quot;Not suitable for AppDynamics sale&quot;,3650,
&quot;Ops Cleaning&quot;,0,
&quot;Existing Competitive Solution Installed&quot;,90,
&quot;No Immediate Need&quot;,90,
&quot;Couldn&apos;t Connect&quot;,30,
&quot;Inaccurate Contact Info&quot;,30,
&quot;Existing AppD Customer&quot;,90,
&quot;Not a Technology Fit&quot;,90,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by Full Circle to determine how to set a date stamp in the Nurture Timeout field if criteria is met.</inlineHelpText>
        <label>Nurture Timeout Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin_LP__c</fullName>
        <label>Origin LP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Origin_Source_Type__c</fullName>
        <label>Origin Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Referrer_Mapped_to_Opportunity__c</fullName>
        <formula>mkto2__Original_Referrer__c</formula>
        <label>Original Referrer- Mapped to Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Response_Keyword__c</fullName>
        <label>Original Response Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Response_Vendor__c</fullName>
        <label>Original Response Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source_Lite_Downloader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Lead Source Lite Downloader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPC__c</fullName>
        <label>Referral</label>
        <picklist>
            <picklistValues>
                <fullName>Sourceforge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dzone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stackoverflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Javaranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techtarget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaPerformanceTuning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Page_Visit_Time_Stamp__c</fullName>
        <label>Page Visit Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the partner?</description>
        <label>Partner Involved</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_URL_Parameter__c</fullName>
        <label>Partner URL Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <picklist>
            <picklistValues>
                <fullName>AGSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apica Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudBees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datavail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grid Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Source Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J9Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newton Technology Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTT Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightScale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scicom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOASTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splunk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Lead_Link__c</fullName>
        <formula>&quot;https://tapp0.salesforce.com/secur/login_portal.jsp?orgId=00DT0000000JKlR&amp;portalId=060T00000004fE2&amp;startURL=/&quot; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Lead Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Reason Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>1- TradeShow Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Webpage visit w phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Lite w/ phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Campaign Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Drip Campaign Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- 60 pts w/ phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- TradeShow Opens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- Campaign Clicks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Lite w/o phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Webpage visit w/o phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- 60 pts w/o phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Webinar Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Webinar Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- Superlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Engagement_Score__c</fullName>
        <label>Product Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Score_Tier__c</fullName>
        <formula>IF(infer2__Infer_Score__c&gt;=84,&apos;A&apos;, 
IF(infer2__Infer_Score__c&gt;=60,&apos;B&apos;, 
IF(infer2__Infer_Score__c&gt;=42,&apos;C&apos;, 
IF(infer2__Infer_Score__c&lt;42,&apos;D&apos;,&apos; &apos; 
))))</formula>
        <label>Profile Score Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Budgeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <label>Project City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Country__c</fullName>
        <label>Project Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Postal_Code__c</fullName>
        <label>Project Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <label>Project State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Street_Address__c</fullName>
        <label>Project Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Page_Visit_Times__c</fullName>
        <label>Recent Page Visit Times</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Querystrings__c</fullName>
        <label>Recent Querystrings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Search_Phrases__c</fullName>
        <label>Recent Search Phrases</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recent_Web_Pages__c</fullName>
        <label>Recent Web Pages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Primary_Practice_Leader_Email__c</fullName>
        <label>Referral Primary Practice Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Registration_Date__c</fullName>
        <label>Referral Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_Company_Name__c</fullName>
        <label>Referrer Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email_Address__c</fullName>
        <label>Referrer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Full_Name__c</fullName>
        <label>Referrer Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone_Number__c</fullName>
        <label>Referrer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration_Date__c</fullName>
        <label>Registration Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <description>Name of Person contact reports to</description>
        <label>Reports To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Detail__c</fullName>
        <label>Response Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Keyword__c</fullName>
        <label>Response Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_LP__c</fullName>
        <label>Response LP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Vendor__c</fullName>
        <label>Response Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_City__c</fullName>
        <formula>IF(!ISBLANK(City),City, 
IF(!ISBLANK(Current_City__c),Current_City__c, 
IF(!ISBLANK(mkto2__Inferred_City__c),mkto2__Inferred_City__c, 
&apos;&apos; 
)))</formula>
        <label>Routing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Country__c</fullName>
        <formula>IF(OR(Normalized_Country__c=&apos;US&apos;,Normalized_Country__c=&apos;USA&apos;),&apos;United States&apos;,Normalized_Country__c)</formula>
        <label>Routing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Postal_Code__c</fullName>
        <formula>IF(!ISBLANK(Current_Postal_Code__c),Current_Postal_Code__c,
IF(!ISBLANK(PostalCode),PostalCode, 
IF(!ISBLANK(mkto2__Inferred_Postal_Code__c), mkto2__Inferred_Postal_Code__c, 
&apos;&apos; 
)))</formula>
        <label>Routing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_State_Province__c</fullName>
        <formula>IF(!ISBLANK(State),State, 
IF(!ISBLANK(Current_State_Province__c), Current_State_Province__c,
IF(!ISBLANK(mkto2__Inferred_State_Region__c), mkto2__Inferred_State_Region__c, 
&apos;&apos; 
)))</formula>
        <label>Routing State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Street__c</fullName>
        <formula>Street</formula>
        <label>Routing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Campaign_Name_Original__c</fullName>
        <label>SEO Campaign Name Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Campaign_Name__c</fullName>
        <description>Name of the advertising campaign, i.e. Gartner Magic Quadrant.</description>
        <label>SEO Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_CreativeID_Original__c</fullName>
        <label>SEO CreativeID Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_CreativeID__c</fullName>
        <description>Text name of the creative</description>
        <label>SEO CreativeID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Keyword_Original__c</fullName>
        <label>SEO Keyword Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Keyword__c</fullName>
        <description>What was the Keyword that generated this lead?</description>
        <label>SEO Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Landing_Page_Original__c</fullName>
        <label>SEO Landing Page Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Landing_Page__c</fullName>
        <description>This field needs to store the URL of our Landing Page and will also help with sanity checks of our tagging (e.g. “source” is not matching the related tagged url =&gt; tracking is not working correctly).</description>
        <label>SEO Landing Page</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEO_Lead_Source_Original__c</fullName>
        <label>SEO Lead Source Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Lead_Source__c</fullName>
        <description>This field is for tracking the Traffic Source for leads, i.e. Twitter</description>
        <label>SEO Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Medium_Original__c</fullName>
        <label>SEO Medium Original</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Medium__c</fullName>
        <description>What was the medium used for this lead, PPC, Social?</description>
        <label>SEO Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <formula>DandbCompany.PrimarySic</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com SIC Code</label>
        <type>Text</type>
    </fields>
</CustomObject>